# rsubs-lib

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-tests.yml  rust-clippy.yml  rust.yml
examples/: change_style_colors.rs  convert_around.rs  shift_srt_by_1s.rs  simplest_usage.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  srt.rs  ssa.rs  vtt.rs
src/subs/: mod.rs  srt.rs  vtt.rs
src/util/: color.rs  mod.rs  time.rs
tests/: srt.rs  ssa.rs  tests.rs  vtt.rs
tests/fixtures/: test.ass  test.srt  test.vtt
