[package]
name = "rsubs-lib"
version = "0.1.7"
edition = "2021"
authors = ["Alex Dracea, adracea@gmail.com"]
documentation = "https://docs.rs/rsubs-lib"
description = "Pure Rust subtitle manipulation and conversion library."
readme = "README.md"
repository = "https://github.com/adracea/rsubs-lib"
license = "MIT"
keywords = ["subtitle", "subs", "convert","manipulate"]
categories = ["encoding","parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.8"
serde = {version="1.0", features = ["derive"]}