[package]
name = "rsubs-lib"
edition = "2021"
authors = ["Alex Dracea, adracea@gmail.com"]
version = "0.3.2"
documentation = "https://docs.rs/rsubs-lib"
description = "Pure Rust subtitle manipulation and conversion library."
readme = "README.md"
repository = "https://github.com/adracea/rsubs-lib"
license = "MIT"
keywords = ["subtitle", "subs", "convert", "manipulate"]
categories = ["encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }

[dev-dependencies]
serde_json = "1.0"
